style: add box-shadow to container

--- a/redux-todo-react/src/components/Container.scss
+++ b/redux-todo-react/src/components/Container.scss
@@ -9,6 +9,7 @@
   background-color: $common-color-light-grey;
   border-radius: 10px;
   overflow: hidden;
+  box-shadow: 4px 4px 12px $common-color-shadow-black-darker;
 }
 
 header {
