feat(react): apply move event
- add moveTodo reducer
- add index and totalLength prop to TodoItem
- implement move event
- expose move buttons only for todos
- add a couple of grey colors
- disable move button depending on item's index

--- a/redux-todo-react/src/components/TodoItem.scss
+++ b/redux-todo-react/src/components/TodoItem.scss
@@ -92,6 +92,13 @@
       background-color: $common-color-darker-grey;
     }
 
+    &.move-item {
+      &[disabled] {
+        color: $common-color-light-grey;
+        background-color: $common-color-semi-dark-grey;
+      }
+    }
+
     &.remove-item {
       width: 14px;
       height: 14px;
