--- a/redux-todo-react/src/styles/common.scss
+++ b/redux-todo-react/src/styles/common.scss
@@ -11,6 +11,8 @@ $common-gradient-ts-blue: linear-gradient(
 $common-color-almost-white: rgb(241, 241, 241);
 $common-color-lighter-grey: rgb(150, 150, 150);
 $common-color-light-grey: rgb(95, 95, 95);
+$common-color-grey: rgb(85, 85, 85);
+$common-color-semi-dark-grey: rgb(80, 80, 80);
 $common-color-dark-grey: rgb(76, 76, 76);
 $common-color-darker-grey: rgb(70, 70, 70);
 $common-color-ts-blue: rgb(84, 152, 255);
